Fix filter and over scroll on mobile

--- a/src/Pages/FilterClubs/FilterClubs.scss
+++ b/src/Pages/FilterClubs/FilterClubs.scss
@@ -36,16 +36,17 @@
 	.team-filter-dropdown {
 		display: flex;
 		position: absolute;
-		top: 60px;
+		top: 57px;
 		flex-direction: column;
+		margin-left: -10px; // account for padding in container
 		background-color: white;
-		width: calc(100% - 10px);
+		width: 100%;
 		max-height: 150px;
 		overflow: hidden;
 		overflow-y: auto;
 
-		option {
-			margin: 10px 0px;
+		div {
+			padding: 10px;
 			font-weight: 300;
 
 			&:hover {
